Run only if SECURE_INTEGRATION
Signed-off-by: Craig Perkins <cwperx@amazon.com>

--- a/.ci/opensearch/Dockerfile
+++ b/.ci/opensearch/Dockerfile
@@ -3,7 +3,7 @@ FROM "opensearchproject/opensearch:$STACK_VERSION"
 ARG SECURE_INTEGRATION
 ARG opensearch_path=/usr/share/opensearch
 ARG opensearch_yml=$opensearch_path/config/opensearch.yml
-RUN chmod +x $opensearch_path/plugins/opensearch-security/tools/install_demo_configuration.sh
-RUN yes | $opensearch_path/plugins/opensearch-security/tools/install_demo_configuration.sh
-RUN echo "plugins.security.filter_securityindex_from_all_requests: true" >> $opensearch_yml
+RUN if [ "$SECURE_INTEGRATION" != "true" ] ; then chmod +x $opensearch_path/plugins/opensearch-security/tools/install_demo_configuration.sh; fi
+RUN if [ "$SECURE_INTEGRATION" != "true" ] ; then yes | $opensearch_path/plugins/opensearch-security/tools/install_demo_configuration.sh; fi
+RUN if [ "$SECURE_INTEGRATION" != "true" ] ; then echo "plugins.security.filter_securityindex_from_all_requests: true" >> $opensearch_yml; fi
 RUN if [ "$SECURE_INTEGRATION" != "true" ] ; then $opensearch_path/bin/opensearch-plugin remove opensearch-security; fi
