Add with Security to github action name
Signed-off-by: Craig Perkins <cwperx@amazon.com>

--- a/.github/workflows/test-integration-unreleased-with-security.yml
+++ b/.github/workflows/test-integration-unreleased-with-security.yml
@@ -1,4 +1,4 @@
-name: Integration with Unreleased OpenSearch
+name: Integration with Unreleased OpenSearch with Security
 
 on: [push, pull_request]
 
