Test security against 2.x cluster
Signed-off-by: Craig Perkins <cwperx@amazon.com>

--- a/.github/workflows/test-integration-unreleased-with-security.yml
+++ b/.github/workflows/test-integration-unreleased-with-security.yml
@@ -9,7 +9,7 @@ jobs:
       fail-fast: false
       matrix:
         entry:
-          - { opensearch_ref: 'main' }
+          - { opensearch_ref: '2.x' }
     steps:
       - name: Checkout OpenSearch
         uses: actions/checkout@v2
