Disable security default index init
Signed-off-by: Craig Perkins <cwperx@amazon.com>

--- a/.ci/opendistro/Dockerfile
+++ b/.ci/opendistro/Dockerfile
@@ -2,4 +2,9 @@ ARG STACK_VERSION
 FROM "amazon/opendistro-for-elasticsearch:$STACK_VERSION"
 ARG SECURE_INTEGRATION
 ARG es_path=/usr/share/elasticsearch
+ARG es_yml=$es_path/config/elasticsearch.yml
+
+RUN if [ "$SECURE_INTEGRATION" == "true" ] ; then chmod +x $es_path/plugins/opendistro_security/tools/install_demo_configuration.sh; fi
+RUN if [ "$SECURE_INTEGRATION" == "true" ] ; then yes | $es_path/plugins/opendistro_security/tools/install_demo_configuration.sh; fi
+RUN if [ "$SECURE_INTEGRATION" == "true" ] ; then echo "opendistro_security.allow_default_init_securityindex: true" >> $es_yml; fi
 RUN if [ "$SECURE_INTEGRATION" != "true" ] ; then $es_path/bin/elasticsearch-plugin remove opendistro_security; fi
