--- a/.ci/opendistro/Dockerfile
+++ b/.ci/opendistro/Dockerfile
@@ -6,5 +6,5 @@ ARG es_yml=$es_path/config/elasticsearch.yml
 
 RUN if [ "$SECURE_INTEGRATION" == "true" ] ; then chmod +x $es_path/plugins/opendistro_security/tools/install_demo_configuration.sh; fi
 RUN if [ "$SECURE_INTEGRATION" == "true" ] ; then yes | $es_path/plugins/opendistro_security/tools/install_demo_configuration.sh; fi
-RUN if [ "$SECURE_INTEGRATION" == "true" ] ; then echo "opendistro_security.allow_default_init_securityindex: true" >> $es_yml; fi
+RUN if [ "$SECURE_INTEGRATION" == "true" ] ; then echo "opendistro_security.allow_default_init_securityindex: false" >> $es_yml; fi
 RUN if [ "$SECURE_INTEGRATION" != "true" ] ; then $es_path/bin/elasticsearch-plugin remove opendistro_security; fi
